--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "seed": "node seeds/seed.js",
     "watch": "nodemon server.js"
   },
   "keywords": [],
@@ -12,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "apollo-server-express": "^3.6.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "graphql": "^15.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
